fix provenance text color in dark mode

--- a/nifi-nar-bundles/nifi-framework-bundle/nifi-framework/nifi-web/nifi-web-frontend/src/main/nifi/src/app/pages/provenance/ui/provenance-event-listing/provenance-event-table/lineage/_lineage.component-theme.scss
+++ b/nifi-nar-bundles/nifi-framework-bundle/nifi-framework/nifi-web/nifi-web-frontend/src/main/nifi/src/app/pages/provenance/ui/provenance-event-listing/provenance-event-table/lineage/_lineage.component-theme.scss
@@ -26,17 +26,23 @@
     // Get the color palette from the color-config.
     $primary-palette: map.get($color-config, 'primary');
     $warn-palette: map.get($color-config, 'warn');
+    $canvas-primary-palette: map.get($canvas-color-config, 'primary');
     $canvas-accent-palette: map.get($canvas-color-config, 'accent');
 
     // Get hues from palette
     $primary-palette-A400: mat.get-color-from-palette($primary-palette, 'A400');
     $warn-palette-400: mat.get-color-from-palette($warn-palette, 400);
     $warn-palette-A200: mat.get-color-from-palette($warn-palette, 'A200');
+    $canvas-primary-palette-A200: mat.get-color-from-palette($canvas-primary-palette, 'A200');
     $canvas-accent-palette-A200: mat.get-color-from-palette($canvas-accent-palette, 'A200');
 
     #lineage {
         canvas,
         svg {
+            text.event-type {
+                fill: $canvas-primary-palette-A200;
+            }
+
             path.link.selected {
                 stroke: $warn-palette-400;
             }
